# robo-miscs

./: .gitignore  General.md
JudgeSystem/: judge_system.c  judge_system.h
RM_ROS/auto_car/: auto_car.workspace.user.765d7aa  autocar  分析.txt  评测.txt
RM_ROS/auto_car/image/: 评测.txt
RM_ROS/auto_car/src/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
RM_ROS/auto_car/src/vision_unit/: CMakeLists.txt  CMakeLists_no_rune_detect.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
RM_ROS/auto_car/src/vision_unit/catkin_generated/: vision_unit-msg-extras.cmake.develspace.in
RM_ROS/auto_car/src/vision_unit/cmake/: vision_unit-genmsg-context.py  vision_unit-genmsg.cmake
RM_ROS/auto_car/src/vision_unit/include/vision_unit/detect_factory/: armor_detect.h  debug_utility.hpp  draw.h  rune_detect.h  util.h  video_recoder.h
RM_ROS/auto_car/src/vision_unit/include/vision_unit/vision_lidar_fusion/: lidar2camera_node.h
RM_ROS/auto_car/src/vision_unit/launch/: armor_detect.launch
RM_ROS/auto_car/src/vision_unit/src/: rune_detect_node.cpp
RM_ROS/auto_car/src/vision_unit/src/detect_factory/: armor_detect.cpp  draw.cpp  util.cpp
RM_ROS/auto_car/src/vision_unit/src/vision_lidar_fusion/: vision_lidar_fusion.cpp
RM_ROS/test_package/: 评测.txt
RM_ROS/test_package/devel/: .catkin  .rosinstall  setup.sh
RM_ROS/two_camera_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  two_camera_test  评测.txt
Yaphets_ws/: .project
Yaphets_ws/src/: .cproject
Yaphets_ws/src/apriltags_ros/: .cproject  .project
Yaphets_ws/src/video_record/: CMakeLists.txt  Makefile  cmake_install.cmake  record.cpp  record_video
auto_car/: 分析.txt
auto_car/doc/html/: MoveBaseConfig_8h_source.html  annotated_dup.js  armor__detect_8h_source.html  armor__msg_8h_source.html  classLidar2Camera-members.html  classLidar2Camera.html  classLidar2Camera.js  classLogicalCore.html  classMissionMode-members.html  classMissionMode.html  classMissionMode.js  classMissionMode__inherit__graph.map  classPatrolMode-members.html  classPatrolMode.html  classPatrolMode.js  classPatrolMode__coll__graph.map  classPatrolMode__coll__graph.md5  classPointMode.js  classPointMode__inherit__graph.map  classPointMode__inherit__graph.md5  classRuneDetect-members.html  classRuneDetect.html  classRuneDetect.js  classShootingMode.html  classShootingMode.js  classShootingMode__coll__graph.map  classShootingMode__inherit__graph.md5  classVisionLidarFusion-members.html  classVisionLidarFusion.html  classVisionLidarFusion.js  classautocar_1_1odom__mul_1_1vel2odom-members.html  classautocar_1_1odom__mul_1_1vel2odom.html  classautocar_1_1odom__mul_1_1vel2odom.js  (+562 more)
auto_car/src/: 评测.txt
auto_car/src/tf_tree/: CMakeLists.txt  评测.txt
auto_car/src/tf_tree/include/tf_tree/: tf_factory.h  tf_param.h
auto_car/src/tf_tree/src/: tf_broadcaster.cpp  tf_factory.cpp  tf_param.cpp
auto_car/src/vision_unit/: package.xml
auto_car/src/vision_unit/include/vision_unit/detect_factory/: armor_detect_node.h  detect_factory.h  image_utility.h  labeler.h  vision_param.cpp
auto_car/src/vision_unit/launch/: armor_detect.launch
auto_car/src/vision_unit/msg/: armor_msg.msg  transformed_scan.msg
auto_car/src/vision_unit/src/detect_factory/: armor_detect_node.cpp  armor_detect_node.cpp~  labeler.cpp  main.cpp  rune_detect_node.cpp
auto_car/src/vision_unit/src/vision_lidar_fusion/: lidar2camera_node.cpp
detect_car/: CMakeLists.txt  cmake_install.cmake  detect_circle.cpp
detect_car/codes/: detect.cpp  detect.h  detect_car.cpp  detect_circle.cpp  detect_tape.cpp
detect_car/msg/: flight_msg.msg
dji_sdk_controller/: CMakeLists.txt  package.xml  package.xml~
dji_sdk_controller/include/: ctrl_type.h  ctrl_type.h~
dji_sdk_controller/launch/: dji_sdk_client.launch
dji_sdk_controller/msg/: flight_msg.msg  flight_msg.msg~
dji_sdk_controller/src/: controllerNode.cpp  controllerNode.h  flight_param.yml~  pid_set.h
dji_sdk_controllerv2.0beta/include/: ctrl_type.h
dji_sdk_controllerv2.0beta/src/: controllerNode.cpp  controllerNode.h
dji_sdk_demo/: CMakeLists.txt  CMakeLists.txt~  flight_param.yaml  package.xml
dji_sdk_demo/include/: ctrl_type.h
dji_sdk_demo/msg/: StatusCodeStamped.msg
dji_sdk_demo/src/: client.cpp  helperfn.cpp  helperfn.hpp  pid_set.h  pid_set.h~  pidconfig.txt
dji_sdk_demov3.0-dev/: CMakeLists.txt  flight_param.yaml
dji_sdk_demov3.0-dev/include/: ctrl_type.h
dji_sdk_demov3.0-dev/src/: client.cpp  helperfn.cpp  helperfn.hpp  pid_set.h
leroy_ws/: .cproject
script/: HOSTS  auto_setup.sh  car_udev.rules  usb_cam.rules
shit_ws/: circle.avi
shit_ws/install/: .rosinstall  _setup_util.py  setup.sh
shit_ws/src/apriltags/: CMakeLists.txt
shit_ws/src/apriltags/.svn/: wc.db
shit_ws/src/apriltags/example/: apriltags_demo.cpp
shit_ws/src/apriltags/pod-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
shit_ws/src/apriltags/pod-build/example/: Makefile  cmake_install.cmake
shit_ws/src/apriltags/pod-build/lib/pkgconfig/: apriltags.pc
shit_ws/src/apriltags/src/: Quad.cc
shit_ws/src/detect_car/: CMakeCache.txt  CMakeLists.txt  Makefile  MyVideo2.avi  calibration  call.txt  circle.avi  cmake_install.cmake  detect_car  detect_car.cpp  detect_circle  detect_circle.cpp  detect_tape  detect_tape.cpp  lee.cpp  package.xml  test1.cpp
shit_ws/src/detect_car/codes/: controllerNode.cpp  detect-copy.cpp  detect-copy.h  detect.cpp  detect.h  detect_tape.cpp
shit_ws/src/detect_car/codes/usable/: detect.cpp  detect.h
shit_ws/src/detect_car/imgs/: 2.avi  MyVideo1.avi
shit_ws/src/video_record/: pic  (+7 more)
udp_packet/: udp_packet  udp_packet.c  udp_packet.h
(+613 files in other folders)
